--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,14 @@
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
     <script src="node_modules/angular2/bundles/http.dev.js"></script>
 
+    <!-- JQuery -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" />
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
     <!-- 2. Configure SystemJS -->
     <script>
     System.config({
