--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,41 +1,31 @@
 <html>
   <head>
-    <title>IronMan IotVerify</title>
+    <base href="/">
+    <title>Angular 2 QuickStart</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 
     <!-- 1. Load libraries -->
-    <!-- IE required polyfills, in this exact order -->
+     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
-    <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
-    <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
 
-    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
-    <script src="node_modules/rxjs/bundles/Rx.js"></script>
-    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
-    <script src="node_modules/angular2/bundles/router.dev.js"></script>
-    <script src="node_modules/angular2/bundles/http.dev.js"></script>
 
-    <!-- JQuery -->
+    <!-- Add jquery -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" />
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="resources/js/semantic.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" class="ui" href="resources/css/semantic.css" />
+    <link rel="stylesheet" type="text/css" class="ui" href="resources/css/main.css" />
 
     <!-- 2. Configure SystemJS -->
+    <script src="systemjs.config.js"></script>
     <script>
-    System.config({
-      map: { 'rxjs': 'node_modules/rxjs' },
-      packages: {
-        app: { format: 'register', defaultExtension: 'js' },
-        'rxjs': {defaultExtension: 'js'}
-      }
-    });
-      System.import('app/main')
-            .then(null, console.error.bind(console));
+      System.import('app').catch(function(err){ console.error(err);  });
     </script>
   </head>
 
