--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,11 +16,13 @@
 
     <!-- Add jquery -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.js"></script>
     <script src="resources/js/semantic.min.js"></script>
 
     <link rel="stylesheet" type="text/css" class="ui" href="resources/css/semantic.css" />
     <link rel="stylesheet" type="text/css" class="ui" href="resources/css/main.css" />
+
+    <script src="node_modules/ng2-bs3-modal/bundles/ng2-bs3-modal.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
